<resources>
    <string name="app_name">sae32</string>
    <string name="server">Server</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="listening_port">Listening Port</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="client">Client</string>
    <string name="networkint_error1">NetworkInterface not known</string>
    <string name="network_error1">Incorrect Listening port (not an integer)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="start_server">Start Server</string>
    <string name="ip_adress">Ip Adress</string>
    <string name="port">Port</string>
    <string name="TCPMessage">Message</string>
    <string name="send">Send</string>
    <string name="connect">Connect</string>
    <string name="ServerName">Server name</string>
    <string name="ClientName">Client name</string>
</resources>